[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assests/Solid color.png" type="Texture" id=1]
[ext_resource path="res://Scripts/4X4_DIFFICULTY.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Block_8.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Block_7.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Block_6.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Block_9.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Block_5.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Block_2.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Block_3.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Block_4.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Block_1.gd" type="Script" id=11]
[ext_resource path="res://Fonts/Arial 32.tres" type="DynamicFont" id=12]
[ext_resource path="res://Fonts/Arial 25.tres" type="DynamicFont" id=13]
[ext_resource path="res://Scripts/Block_13.gd" type="Script" id=14]
[ext_resource path="res://Scripts/Block_12.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Block_11.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Block_14.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Block_15.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Block_16.gd" type="Script" id=19]
[ext_resource path="res://Scripts/Block_10.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]

[node name="Node" type="Node"]
script = ExtResource( 2 )

[node name="Block_1" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )

[node name="Block_1_spr" type="Sprite" parent="Block_1"]
position = Vector2( 195, 181 )
texture = ExtResource( 1 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_1"]
position = Vector2( 195, 181 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 1 )

[node name="Block_2" type="Area2D" parent="."]

[node name="Block_2_spr" type="Sprite" parent="Block_2"]
position = Vector2( 260, 181 )
texture = ExtResource( 1 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_2"]
position = Vector2( 260, 181 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 2 )

[node name="Block_3" type="Area2D" parent="."]

[node name="Block_3_spr" type="Sprite" parent="Block_3"]
position = Vector2( 325, 181 )
texture = ExtResource( 1 )
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_3"]
position = Vector2( 325, 181 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 3 )

[node name="Block_4" type="Area2D" parent="."]

[node name="Block_4_spr" type="Sprite" parent="Block_4"]
position = Vector2( 390, 181 )
texture = ExtResource( 1 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_4"]
position = Vector2( 390, 181 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 4 )

[node name="Block_5" type="Area2D" parent="."]

[node name="Block_5_spr" type="Sprite" parent="Block_5"]
position = Vector2( 195, 246 )
texture = ExtResource( 1 )
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_5"]
position = Vector2( 195, 246 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 5 )

[node name="Block_6" type="Area2D" parent="."]

[node name="Block_6_spr" type="Sprite" parent="Block_6"]
position = Vector2( 260, 246 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_6"]
position = Vector2( 260, 246 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 6 )

[node name="Block_7" type="Area2D" parent="."]

[node name="Block_7_spr" type="Sprite" parent="Block_7"]
position = Vector2( 325, 246 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_7"]
position = Vector2( 325, 246 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 7 )

[node name="Block_8" type="Area2D" parent="."]

[node name="Block_8_spr" type="Sprite" parent="Block_8"]
position = Vector2( 390, 246 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_8"]
position = Vector2( 390, 246 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 8 )

[node name="Block_9" type="Area2D" parent="."]

[node name="Block_9_spr" type="Sprite" parent="Block_9"]
position = Vector2( 195, 311 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_9"]
position = Vector2( 195, 311 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_10" type="Area2D" parent="."]

[node name="Block_10_spr" type="Sprite" parent="Block_10"]
position = Vector2( 260, 311 )
texture = ExtResource( 1 )
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_10"]
position = Vector2( 260, 311 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_11" type="Area2D" parent="."]

[node name="Block_11_spr" type="Sprite" parent="Block_11"]
position = Vector2( 325, 311 )
texture = ExtResource( 1 )
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_11"]
position = Vector2( 325, 311 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_12" type="Area2D" parent="."]

[node name="Block_12_spr" type="Sprite" parent="Block_12"]
position = Vector2( 390, 311 )
texture = ExtResource( 1 )
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_12"]
position = Vector2( 390, 311 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_13" type="Area2D" parent="."]

[node name="Block_13_spr" type="Sprite" parent="Block_13"]
position = Vector2( 195, 376 )
texture = ExtResource( 1 )
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_13"]
position = Vector2( 195, 376 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_14" type="Area2D" parent="."]

[node name="Block_14_spr" type="Sprite" parent="Block_14"]
position = Vector2( 260, 376 )
texture = ExtResource( 1 )
script = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_14"]
position = Vector2( 260, 376 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_15" type="Area2D" parent="."]

[node name="Block_15_spr" type="Sprite" parent="Block_15"]
position = Vector2( 325, 376 )
texture = ExtResource( 1 )
script = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_15"]
position = Vector2( 325, 376 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="Block_16" type="Area2D" parent="."]

[node name="Block_16_spr" type="Sprite" parent="Block_16"]
position = Vector2( 390, 376 )
texture = ExtResource( 1 )
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block_16"]
position = Vector2( 390, 376 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 9 )

[node name="TimeColored" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="GameStart" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Lost" type="Label" parent="."]
visible = false
margin_left = 147.178
margin_top = 21.5675
margin_right = 356.178
margin_bottom = 60.5675
custom_fonts/font = ExtResource( 12 )
text = "You Lost"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
visible = false
margin_left = 146.649
margin_top = 72.4217
margin_right = 355.649
margin_bottom = 111.422
custom_fonts/font = ExtResource( 12 )
text = "Score "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
visible = false
margin_left = 160.0
margin_top = 373.0
margin_right = 361.0
margin_bottom = 415.0
custom_fonts/font = ExtResource( 12 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
visible = false
margin_left = 162.0
margin_top = 423.0
margin_right = 361.0
margin_bottom = 465.0
custom_fonts/font = ExtResource( 12 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="."]
margin_left = 12.0
margin_top = 9.0
margin_right = 52.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 13 )
text = "Lives: "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Block_1" to="." method="_on_Block_1_mouse_entered"]
[connection signal="mouse_exited" from="Block_1" to="." method="_on_Block_1_mouse_exited"]
[connection signal="mouse_entered" from="Block_2" to="." method="_on_Block_2_mouse_entered"]
[connection signal="mouse_exited" from="Block_2" to="." method="_on_Block_2_mouse_exited"]
[connection signal="mouse_entered" from="Block_3" to="." method="_on_Block_3_mouse_entered"]
[connection signal="mouse_exited" from="Block_3" to="." method="_on_Block_3_mouse_exited"]
[connection signal="mouse_entered" from="Block_4" to="." method="_on_Block_4_mouse_entered"]
[connection signal="mouse_exited" from="Block_4" to="." method="_on_Block_4_mouse_exited"]
[connection signal="mouse_entered" from="Block_5" to="." method="_on_Block_5_mouse_entered"]
[connection signal="mouse_exited" from="Block_5" to="." method="_on_Block_5_mouse_exited"]
[connection signal="mouse_entered" from="Block_6" to="." method="_on_Block_6_mouse_entered"]
[connection signal="mouse_exited" from="Block_6" to="." method="_on_Block_6_mouse_exited"]
[connection signal="mouse_entered" from="Block_7" to="." method="_on_Block_7_mouse_entered"]
[connection signal="mouse_exited" from="Block_7" to="." method="_on_Block_7_mouse_exited"]
[connection signal="mouse_entered" from="Block_8" to="." method="_on_Block_8_mouse_entered"]
[connection signal="mouse_exited" from="Block_8" to="." method="_on_Block_8_mouse_exited"]
[connection signal="mouse_entered" from="Block_9" to="." method="_on_Block_9_mouse_entered"]
[connection signal="mouse_exited" from="Block_9" to="." method="_on_Block_9_mouse_exited"]
[connection signal="mouse_entered" from="Block_10" to="." method="_on_Block_10_mouse_entered"]
[connection signal="mouse_exited" from="Block_10" to="." method="_on_Block_10_mouse_exited"]
[connection signal="mouse_entered" from="Block_11" to="." method="_on_Block_11_mouse_entered"]
[connection signal="mouse_exited" from="Block_11" to="." method="_on_Block_11_mouse_exited"]
[connection signal="mouse_entered" from="Block_12" to="." method="_on_Block_12_mouse_entered"]
[connection signal="mouse_exited" from="Block_12" to="." method="_on_Block_12_mouse_exited"]
[connection signal="mouse_entered" from="Block_13" to="." method="_on_Block_13_mouse_entered"]
[connection signal="mouse_exited" from="Block_13" to="." method="_on_Block_13_mouse_exited"]
[connection signal="mouse_entered" from="Block_14" to="." method="_on_Block_14_mouse_entered"]
[connection signal="mouse_exited" from="Block_14" to="." method="_on_Block_14_mouse_exited"]
[connection signal="mouse_entered" from="Block_15" to="." method="_on_Block_15_mouse_entered"]
[connection signal="mouse_exited" from="Block_15" to="." method="_on_Block_15_mouse_exited"]
[connection signal="mouse_entered" from="Block_16" to="." method="_on_Block_16_mouse_entered"]
[connection signal="mouse_exited" from="Block_16" to="." method="_on_Block_16_mouse_exited"]
[connection signal="timeout" from="TimeColored" to="." method="_on_TimeColored_timeout"]
[connection signal="timeout" from="GameStart" to="." method="_on_GameStart_timeout"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
